--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.topNavbar {
+  position: fixed;
+  overflow: hidden;
+  background-color: rgb(193, 76, 41);
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+nav a {
+  display: inline-block;
+  padding: 1.5rem 1rem;
+  margin: 0 1rem;
+  text-decoration: none;
+  font-size: 2.2em;
+  color: rgb(34, 44, 178);
+  border-bottom: 2px solid rgb(48, 34, 178);
+  transition: 0.1s;
+}
+
+nav a:hover {
+  color: rgb(38, 177, 38);
+}
+nav a:active {
+  color: rgb(43, 36, 34);
+  border-bottom: 2px solid rgb(71, 89, 255);
+  font-size: larger;
+}
+
+#movielist,
+#movie {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 50vh;
+  min-height: 400px;
+  padding: 1rem;
 }
