--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,23 @@
 }
 
 
+#home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 50vh;
+  min-height: 400px;
+  padding: 1rem;
+  font-size: 1.5em;
+  color: brown;
+}
+
+#home {
+  background-color: cornsilk;
+}
+
 nav {
   position: fixed;
   overflow: hidden;
