Added a Yet to watch and delete buttons

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,10 @@ nav a:active {
   min-width: 10em;
 }
 
+.movielist > div > button {
+  min-width: 6em;
+}
+
 form.movie-form {
   border: solid black 1px;
   padding: 1em;
