--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,35 @@ body {
   flex-direction: row;
 }
 
+.navBar {
+  position: fixed;
+  overflow: hidden;
+  background-color: rgb(238, 44, 10);
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.navBar a {
+  display: inline-block;
+  padding: 1.5rem 1rem;
+  margin: 0 1rem;
+  text-decoration: none;
+  font-size: 2.2em;
+  color: rgb(34, 44, 178);
+  border-bottom: 2px solid rgb(48, 34, 178);
+  transition: 0.1s;
+}
+
+.navBar a:hover {
+  color: rgb(13, 253, 5);
+}
+.navBar a:active {
+  color: rgb(43, 36, 34);
+  border-bottom: 2px solid rgb(71, 89, 255);
+  font-size: larger;
+}
+
 #home {
   display: flex;
   align-items: center;
@@ -25,6 +54,30 @@ body {
 
 #home {
   background-color: cornsilk;
+}
+.movielist {
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  text-align: center;
+  height: 50vh;
+  min-height: 100px;
+  max-height: 200px;
+  margin: auto;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 1rem;
+  background-color: whitesmoke;
+}
+
+.movielist > div {
+  border-bottom: solid 2px rgb(128, 128, 128);
+  padding-bottom: 1em;
+  min-width: 10em;
+}
+
+.movielist > div > button {
+  min-width: 6em;
 }
 
 .sidebar {
@@ -43,74 +96,25 @@ body {
   height: 50%;
   background-color: aqua;
 }
-nav {
-  position: fixed;
-  overflow: hidden;
-  background-color: rgb(193, 41, 66);
-  top: 0;
-  left: 0;
-  right: 0;
-}
 
-nav a {
-  display: inline-block;
-  padding: 1.5rem 1rem;
-  margin: 0 1rem;
-  text-decoration: none;
-  font-size: 2.2em;
-  color: rgb(34, 44, 178);
-  border-bottom: 2px solid rgb(48, 34, 178);
-  transition: 0.1s;
-}
 
-nav a:hover {
-  color: rgb(38, 177, 38);
-}
-nav a:active {
-  color: rgb(43, 36, 34);
-  border-bottom: 2px solid rgb(71, 89, 255);
-  font-size: larger;
-}
-
-.movielist {
-  display: inline-block;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  text-align: center;
-  height: 50vh;
-  min-height: 100px;
-  max-height: 200px;
-  margin: auto;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding: 1rem;
-  background-color: cornsilk;
-}
-
-.movielist > div {
-  border-bottom: solid 2px rgb(128, 128, 128);
-  padding-bottom: 1em;
-  min-width: 10em;
-}
-
-.movielist > div > button {
-  min-width: 6em;
-}
-
-form.movie-form {
+form.movieform {
   border: solid black 1px;
   padding: 1em;
   display: flex;
   flex-direction: column;
 }
 
-form.movie-form > textarea,
-form.movie-form > input {
+form.movieform > textarea,
+form.movieform > input {
   font-size: 1em;
   font-family: sans-serif;
   margin-bottom: 0.5em;
 }
 
+.movieformdiv {
+  margin-top: 200px;
+}
 input[type="submit"],
 button {
   font-weight: bold;
