Styled movieform-title element

--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,13 @@ form.movieform > input {
   align-items: center;
   background-color: cornsilk;
 }
+
+.movieform-title {
+align-items: center;
+background-color: aqua;
+tab-size: 0in;
+}
+
 input[type="submit"],
 button {
   font-weight: bold;
